# Allocator

./: CMakeLists.txt  Makefile  README.md
include/: Allocator.h  Block.h  Pointer.h  allocator.h
src/: Allocator.cpp  Block.cpp  Pointer.cpp  allocator.cpp  main.cpp
tests/: allocator_test  allocator_test.cpp
